# aks-azure

./: .env  .gitignore  .include.mk  .pre-commit-config.yaml  Brewfile  Makefile  README.md  aks-azure.sln
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: .env
.github/workflows/: azure-kubernetes-service.yml  dotnet.yml
deployments/aks-helloworld/: README.md  manifest.yml
deployments/demo/: manifest.yml
k8s/aks-helloworld/: manifest.yml
k8s/aspnetapp/: manifest.yml
k8s/demo/: manifest.yml
k8s/fastapi-ollama/: manifest.yml
k8s/upstream/aks-helloworld/: manifest.yml
k8s/upstream/aks-store/: manifest.yml
k8s/upstream/ollama/: cpu.yaml
scripts/: blackbox.sh  cert-manager.sh  createcert.sh  ingress-nginx.sh  kube-prometheus-stack.sh  open-telemetry.sh  rqlite.sh  ssh-to-k8s.sh
src/: Makefile  collector-config.yaml  compose.yml
src/Http.Client/: Dockerfile  Program.cs
src/aspire/AspireSample/: AspireSample.sln  build.sh
src/aspnetapp/: Dockerfile  OpenTelemetryTrace.cs  Program.cs  README.md  aspnetapp.csproj
src/aspnetapp/Controllers/: Sleep.cs  WeatherForecastController.cs
src/demo/: .dockerignore  Dockerfile  Makefile  compose.yml
src/fastapi-ollama/: Dockerfile  compose.yml  pyproject.toml
src/fastapi-ollama/fastapi-ollama/: main.py
src/lb/: .dockerignore  Dockerfile  Makefile  compose.yml  configure.py  nginx.conf
src/shebang/: .dockerignore  Dockerfile
utils/lb/: Dockerfile  compose.yml  configure.py
utils/otel/: Makefile  README.md  compose.yml  otel-collector-config-connector.yml  prometheus.yml
(+23 files in other folders)
